import 'package:password_manager/models/pm_icon.dart';

final List<PMIcon> pmIcons = [
  PMIcon(
    id: '339bb167-6a2d-4104-bd9f-9993794b36d9',
    url: 'assets/icons/google.png',
    name: 'Google',
  ),
  PMIcon(
    id: '6d8357e2-2e3c-4911-a0a1-96b363eab6b5',
    url: 'assets/icons/gmail.png',
    name: 'Gmail',
  ),
  PMIcon(
    id: '3b3f84ea-581c-4aa2-9e89-4ca340cd315b',
    url: 'assets/icons/adobe.png',
    name: 'Adobe',
  ),
  PMIcon(
    id: '47a9232d-7fa3-4c92-a2e6-b43738eedfd5',
    url: 'assets/icons/airbnb.png',
    name: 'Airbnb',
  ),
  PMIcon(
    id: '31eb50d2-4cbf-4fd2-ae1a-c7adaa4ec370',
    url: 'assets/icons/airtel.png',
    name: 'Airtel',
  ),
  PMIcon(
    id: '26056864-f6c7-497e-823d-55d07dc68d07',
    url: 'assets/icons/amazon.png',
    name: 'Amazon',
  ),
  PMIcon(
    id: 'aa220a84-beb6-4979-8721-b243551180d8',
    url: 'assets/icons/android.png',
    name: 'Android',
  ),
  PMIcon(
    id: '0b5b65e6-c4e0-4196-83f7-8df2fb9f484c',
    url: 'assets/icons/apple.png',
    name: 'Apple',
  ),
  PMIcon(
    id: '6f37a9b5-c19d-4bd0-a6b8-8630db02706f',
    url: 'assets/icons/aws.png',
    name: 'AWS',
  ),
  PMIcon(
    id: '97132485-b10b-4100-ba83-483047ab3114',
    url: 'assets/icons/bing.png',
    name: 'Bing',
  ),
  PMIcon(
    id: 'aa32b388-a6a4-4f02-827e-5787184d3ad9',
    url: 'assets/icons/bitbucket.png',
    name: 'Bitbucket',
  ),
  PMIcon(
    id: 'd175cfae-16e1-4b74-a147-f639c5aac44a',
    url: 'assets/icons/bitcoin.png',
    name: 'Bitcoin',
  ),
  PMIcon(
    id: 'fb945c05-a9e6-4412-a7b5-ba2afe056202',
    url: 'assets/icons/blackberry.png',
    name: 'Blackberry',
  ),
  PMIcon(
    id: '80b80047-f665-4f7e-9a86-e07828b015dd',
    url: 'assets/icons/blogger.png',
    name: 'Blogger',
  ),
  PMIcon(
    id: 'd9111e61-bf6a-4172-a620-2858cf92cdb0',
    url: 'assets/icons/crunchyroll.png',
    name: 'Crunchyroll',
  ),
  PMIcon(
    id: '9b205201-f058-4457-a1cb-654d270f856ad',
    url: 'assets/icons/default.png',
    name: 'Default',
  ),
];
