...

  @override
  Widget build(BuildContext context) {
    print('Rendering password screen');
    return Scaffold(
      appBar: AppBar(
        title: Text(_new ? 'New password' : 'Update password'),
        actions: _new ? [] : [PasswordAction(password: widget.password)],
      ),
      body: Form(
        key: _formKey,
        child: Padding(
          padding: const EdgeInsets.all(16),
...
